[gd_scene load_steps=3 format=3 uid="uid://3p1s8sx0w8w6"]

[ext_resource type="Script" uid="uid://bgb2jymuei5cn" path="res://scripts/test/FuelTest.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://b2jhlarqtnqfi" path="res://scenes/ui/fuel_refuel_panel.tscn" id="2"]

[node name="FuelTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Panel" type="PanelContainer" parent="CanvasLayer/HUD"]
layout_mode = 1
offset_left = 16.0
offset_top = 16.0
offset_right = 16.0
grow_horizontal = 0

[node name="FuelRefuelPanel" parent="CanvasLayer/HUD" instance=ExtResource("2")]
visible = false
layout_mode = 1

[node name="CanvasLayer_HUD_Panel_Pad#VBox" type="VBoxContainer" parent="."]
layout_mode = 0
theme_override_constants/separation = 8

[node name="CanvasLayer_HUD_Panel_Pad_VBox#Row1" type="HBoxContainer" parent="."]
layout_mode = 0

[node name="CanvasLayer_HUD_Panel_Pad_VBox_Row1#BtnMove" type="Button" parent="."]
layout_mode = 0
text = "Toggle Move"

[node name="CanvasLayer_HUD_Panel_Pad_VBox_Row1#BtnDrain" type="Button" parent="."]
layout_mode = 0
text = "Drain to 5%"

[node name="CanvasLayer_HUD_Panel_Pad_VBox_Row1#BtnTeleport" type="Button" parent="."]
layout_mode = 0
text = "Tanker → Receiver"

[node name="CanvasLayer_HUD_Panel_Pad_VBox#Row2" type="HBoxContainer" parent="."]
layout_mode = 0

[node name="CanvasLayer_HUD_Panel_Pad_VBox_Row2#BtnTopUp" type="Button" parent="."]
layout_mode = 0
text = "Add 100 to Tanker"

[node name="CanvasLayer_HUD_Panel_Pad_VBox_Row2#BtnPanel" type="Button" parent="."]
layout_mode = 0
text = "Open Refuel Panel"

[node name="CanvasLayer_HUD_Panel_Pad_VBox#Row3" type="HBoxContainer" parent="."]
layout_mode = 0

[node name="CanvasLayer_HUD_Panel_Pad_VBox_Row3#LblRx" type="Label" parent="."]
layout_mode = 0
size_flags_horizontal = 3
text = "Receiver: …"
autowrap_mode = 2

[node name="CanvasLayer_HUD_Panel_Pad_VBox_Row3#LblTk" type="Label" parent="."]
layout_mode = 0
size_flags_horizontal = 3
text = "Tanker: …"
horizontal_alignment = 2
autowrap_mode = 2

[node name="CanvasLayer_HUD_Panel_Pad_VBox#Row4" type="HBoxContainer" parent="."]
layout_mode = 0

[node name="CanvasLayer_HUD_Panel_Pad_VBox_Row4#LblSpd" type="Label" parent="."]
layout_mode = 0
size_flags_horizontal = 3
text = "Speed: …"

[node name="CanvasLayer_HUD_Panel_Pad_VBox_Row4#LblHint" type="Label" parent="."]
layout_mode = 0
size_flags_horizontal = 3
text = "Tip: set TK radius/rate/stock in code"
horizontal_alignment = 2
